--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.7.2",
     "contentlayer": "0.3.4",
     "esbuild": "0.18.11",
     "github-slugger": "^1.4.0",
@@ -46,6 +47,7 @@
     "@types/react": "^18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
+    "@types/axios": "^0.14.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.45.0",
     "eslint-config-next": "13.5.6",
